--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,23 @@
-<p>contact works!</p>
+<br />
+<h1 class="text-center">{{'contactMe' | translate}}</h1>
+<br />
+<div class="text-center">
+  {{'contactMeText'|translate}}
+</div>
+<br />
+<div class="row" style="margin: 1em">
+  <div class="col-sm">
+    <a href="https://www.linkedin.com/in/ruben-naudts/" target="_blank">
+      <mat-card>
+        <mat-card-title> LinkedIn </mat-card-title>
+      </mat-card>
+    </a>
+  </div>
+  <div class="col-sm">
+    <a href="mailto:naudtsruben@live.be">
+      <mat-card>
+        <mat-card-title> Email </mat-card-title>
+      </mat-card>
+    </a>
+  </div>
+</div>
