--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,16 @@
-<p>{{'test'| translate}}</p>
+<div class="clearfix">
+  <img class="float-left" src="../../assets/images/Profielfoto.jpg" />
+  <div class="hometext">
+    <h1>{{'about' | translate}}</h1>
+    <br />
+    <h3>{{'who' | translate}}</h3>
+    <p>
+        {{'whoParagraph' | translate}}
+    </p>
+    <br />
+    <h3>{{'drives' | translate}}</h3>
+    <p>
+      {{'drivesParagraph' | translate}}
+    </p>
+  </div>
+</div>
