--- a/src/app/main-nav/main-nav.component.css
+++ b/src/app/main-nav/main-nav.component.css
@@ -15,3 +15,39 @@
   top: 0;
   z-index: 1;
 }
+
+footer{
+  position: absolute;
+  bottom: 2em;
+  width: 100%;
+
+  height: 2.5rem;
+  display: flex;
+  justify-content: space-around;
+
+}
+
+.page-container{
+  position: relative;
+  min-height: 100vh;
+}
+
+.content-wrap{
+  padding-bottom: 2.5rem;
+}
+
+span{
+  margin: 1em;
+  display: flex;
+  margin-left:auto; 
+  margin-right:0;
+}
+
+button:hover{
+  background-color: palevioletred;
+  transition: all .6s ease;
+}
+
+.mat-list-item:hover{
+  transition: all .4s ease;
+}
