--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -5,3 +5,15 @@ h1{
   margin-top: 3em;
 }
 
+
+mat-card {
+  max-width: 80%;
+  margin-left: 10%;
+  margin-top: 2.5rem;
+  margin-bottom: 5rem;
+}
+
+.example-header-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
+}
