add download buttons cv

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -18,7 +18,7 @@
     </mat-carousel></div>
 
     <p class="description">
-      {{ project.description }}
+      {{ project.description | translate}}
     </p>
     <button
       mat-raised-button
