--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -2,3 +2,12 @@
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
 }
+
+.button-bar{
+    display: flex;
+    justify-content: center;
+}
+
+button{
+    margin: .5rem;
+}
