--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -9,7 +9,7 @@
 
   <mat-card-content>
     <div class="images">
-    <mat-carousel [autoplay]="false" [hideArrows]="false" proportion=55>
+    <mat-carousel [autoplay]="true" [hideArrows]="false" proportion=55>
       <mat-carousel-slide
         *ngFor="let image of project.images"
         image="{{ image.url }}"
