--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,15 +4,11 @@
 @import '~@angular/material/theming';
 // Plus imports for other components in your app.
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat-core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$rubennaudts-primary: mat-palette($mat-indigo, 900, 100, 900);
+$rubennaudts-primary: mat-palette($mat-purple, 900, 100, 900);
 $rubennaudts-accent: mat-palette($mat-pink, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
@@ -33,6 +29,5 @@ $rubennaudts-theme: mat-dark-theme((
 // that you are using.
 @include angular-material-theme($rubennaudts-theme);
 
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { height: 100%;}
+body { margin: 0; font-family: "Roboto", "Helvetica Neue", sans-serif; }
