--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,4 @@
-404 Not Found
+<div class="center">
+  <h3>{{"lost" | translate}}</h3>
+  <img src="../../assets/images/Zoro-Lost-Enies-Lobby.jpg" />
+</div>
