fix mobile view resume button

--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -48,7 +48,7 @@
             </select>
           </span>
         </mat-toolbar>
-        
+
         <ng-content></ng-content>
       </div>
       <footer>
@@ -78,10 +78,7 @@
             src="https://img.icons8.com/material/24/000000/stackoverflow.png"
           />
         </button>
-        <button
-          mat-fab
-          onclick="location.href='mailto:naudtsruben@live.be'"
-        >
+        <button mat-fab onclick="location.href='mailto:naudtsruben@live.be'">
           <img
             src="https://img.icons8.com/material/24/000000/important-mail.png"
           />
