--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -1,19 +1,18 @@
-.container{
-    margin-top: 2.5rem;
-    margin-bottom: 2.5rem;
+.container {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+.button-bar {
+  text-align: center;
 }
 
-.button-bar{
-    display: flex;
-    justify-content: center;
+button {
+  display: inline-block;
+  margin: 0.5rem;
+  margin-bottom: 2rem;
+  min-width: 15rem;
 }
 
-button{
-    margin: .5rem;
-    margin-bottom: 2rem;
-    min-width: 12rem;
-}
-
-button:hover{
-    background-color: darkblue;
+button:hover {
+  background-color: darkblue;
 }
